--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,87 @@
-absl_py==0.9.0
+absl-py==0.9.0
+astunparse==1.6.3
+attrs==20.2.0
+backcall==0.2.0
+cachetools==4.1.1
+certifi==2020.6.20
+chardet==3.0.4
+charset-normalizer==3.2.0
+cloudpickle==1.3.0
+cycler==0.10.0
+Cython==3.0.0
+decorator==4.4.2
+dill==0.3.2
+dm-tree==0.1.5
+docopt==0.6.2
+future==0.18.2
+gast==0.3.3
+google-auth==1.19.2
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+googleapis-common-protos==1.52.0
+grpcio==1.30.0
+h5py==2.10.0
+idna==2.10
+importlib-metadata==1.7.0
+importlib-resources==3.0.0
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+joblib==0.16.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+lxml==4.6.4
+Markdown==3.2.2
+MarkupSafe==2.1.3
+matplotlib==3.3.0
+natsort==8.0.2
+ncls==0.0.63
 numpy==1.18.5
+oauthlib==3.1.0
+opt-einsum==3.3.0
 pandas==1.0.5
+pandas-datareader==0.10.0
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+pipreqs==0.4.13
+promise==2.3
+prompt-toolkit==3.0.8
+protobuf==3.20.0
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.7.3
+pyparsing==2.4.7
+pyranges==0.0.113
+pyrle==0.0.38
+python-dateutil==2.8.1
+pytz==2020.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scikit-learn==0.23.1
+scipy==1.4.1
+seaborn==0.11.0
+six==1.15.0
+sorted-nearest==0.0.39
+tabulate==0.8.9
+tensorboard==2.3.0
+tensorboard-data-server==0.7.1
+tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.0
-tensorflow_probability==0.11.0
-
-
+tensorflow-datasets==4.0.0
+tensorflow-estimator==2.3.0
+tensorflow-metadata==0.24.0
+tensorflow-probability==0.11.0
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tqdm==4.50.0
+traitlets==5.0.5
+urllib3==1.25.10
+wcwidth==0.2.5
+Werkzeug==1.0.1
+wrapt==1.12.1
+yarg==0.1.9
+zipp==3.1.0
