update two group codebase

--- a/SingleGroup/Dockerfile
+++ b/SingleGroup/Dockerfile
@@ -1,5 +1,6 @@
 FROM rocker/r-ver:latest
 
+# Needed by Nextflow
 RUN apt-get update && apt-get install -y procps && rm -rf /var/lib/apt/lists/*
 
 RUN Rscript -e 'install.packages(c("tidyverse", "argparser", "Rcpp", "RcppArmadillo"))'
