add missing comma

--- a/SingleGroup/nextflow.config
+++ b/SingleGroup/nextflow.config
@@ -14,7 +14,7 @@ params {
   simulate_data.extra_args = [
     "--number_of_samples 2",
     "--number_of_cpg_sites 250",
-    "--lambda 100"
+    "--lambda 100",
     "--rng_seed 73"
   ]
 
