--- a/SingleGroup/nextflow.config
+++ b/SingleGroup/nextflow.config
@@ -1,12 +1,14 @@
 params {
+  output_dir = './output'
   output.specify_param_dir = "results/params"
   output.simulated_data_dir = "results/simulated_data"
   output.parameters_and_regimes_dir = "results/regimes"
 
+  mu = [0.99, 0.01, 0.80, 0.20, 0.50, 0.50]
+  sigma = [0.05, 0.05, 0.20, 0.20, 0.20, 0.2886751]
+  u = 2
+
   specify_parameters.extra_args = [
-    "--mu 0.99,0.01,0.80,0.20,0.50,0.50",
-    "--sigma 0.05,0.05,0.20,0.20,0.20,0.2886751",
-    "--u 2",
     "--kappa 2,2,2,2,2,2",
     "--omega 0.995,0.975,0.950,0.925,0.900,0.900"
   ]
