--- a/single_group.config
+++ b/single_group.config
@@ -1,11 +1,23 @@
 params {
-  output.specify_param_dir = "results/params"
-  output.simulated_data_dir = "results/simulated_data"
-  output.parameters_and_regimes_dir = "results/regimes"
+  output_dir = 'results'
+  
+  // The means of the R beta distributions which govern the R distinct methylation regimes. Values must be between 0 and 1
+  meteor_mu = '0.99,0.01,0.80,0.20,0.50,0.50'
+  // The standard deviations of the R beta distributions which govern the R distinct methylation regimes. Note that for each regime, the values of mu and sigma must satisfy sigma^2 < mu * (1 - mu)
+  meteor_sigma = 0.05,0.05,0.20,0.20,0.20,0.2886751
+
+  ///////
+  // Default Arguments
+  ///////
+
+  // The minimum distance (measured as number of CpG sites) between change points.
+  // Defined as `u`
+  min_cpg_sites_between_change_points = 2
+
+  // 
+  
 
   specify_parameters.extra_args = [
-    "--mu 0.99,0.01,0.80,0.20,0.50,0.50",
-    "--sigma 0.05,0.05,0.20,0.20,0.20,0.2886751",
     "--u 2",
     "--kappa 2,2,2,2,2,2",
     "--omega 0.995,0.975,0.950,0.925,0.900,0.900"
