remove specify_parameters script

--- a/single_group.config
+++ b/single_group.config
@@ -1,10 +1,17 @@
 params {
   output_dir = 'results'
-  
-  // The means of the R beta distributions which govern the R distinct methylation regimes. Values must be between 0 and 1
+
+  simulate_data = true
+
+  // The means of the R beta distributions which govern the R distinct
+  // methylation regimes.
+  // Values must be between 0 and 1
   meteor_mu = '0.99,0.01,0.80,0.20,0.50,0.50'
-  // The standard deviations of the R beta distributions which govern the R distinct methylation regimes. Note that for each regime, the values of mu and sigma must satisfy sigma^2 < mu * (1 - mu)
-  meteor_sigma = 0.05,0.05,0.20,0.20,0.20,0.2886751
+
+  // The standard deviations of the R beta distributions which govern the R
+  // distinct methylation regimes. Note that for each regime, the values of mu
+  // and sigma must satisfy sigma^2 < mu * (1 - mu)
+  meteor_sigma = '0.05,0.05,0.20,0.20,0.20,0.2886751'
 
   ///////
   // Default Arguments
@@ -14,16 +21,17 @@ params {
   // Defined as `u`
   min_cpg_sites_between_change_points = 2
 
-  // 
-  
+  // Kappa: Number-of-sucesses parameters of the regime-specific negative-binomial
+  // distributions governing the function h() which determines the change-point
+  // probabilities
+  kappa = '2,2,2,2,2,2'
 
-  specify_parameters.extra_args = [
-    "--u 2",
-    "--kappa 2,2,2,2,2,2",
-    "--omega 0.995,0.975,0.950,0.925,0.900,0.900"
-  ]
+  // Omega: Success-probability parameters of the regime-specific negative-binomial
+  // distributions governing the function h() which determines the change-point
+  // probabilities
+  omega =  '0.995,0.975,0.950,0.925,0.900,0.900'
 
-  simulate_data.extra_args = [
+  simulate_data_extra_args = [
     "--number_of_samples 2",
     "--number_of_cpg_sites 250",
     "--lambda 100",
@@ -34,13 +42,6 @@ params {
     "--estimate_regime_probabilities",
     "--estimate_parameters"
   ]
-
-  // input_mu_csv_path = null
-  // input_sigma_csv_path = null
-  // input_omega_csv_path = null
-  // input_kappa_csv_path = null
-  // input_u_csv_path = null
-  // input_p_csv_path = null
 
   // Default file names
   mu_csv_filename = "mu.csv"
