add config + run for all chromosome in parrallel

--- a/single_group.config
+++ b/single_group.config
@@ -38,7 +38,7 @@ params {
     "--rng_seed 73"
   ]
 
-  parameters_and_regimes.extra_args = [
+  parameters_and_regimes_extra_args = [
     "--estimate_regime_probabilities",
     "--estimate_parameters"
   ]
@@ -65,7 +65,7 @@ profiles {
   }
 }
 
-process {\
+process {
   errorStrategy = 'terminate'
   // errorStrategy = 'ignore'
 }
