--- a/src/two_group/Dockerfile
+++ b/src/two_group/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8.5-slim-buster
 # procps  Needed by Nextflow
 RUN apt-get update && apt-get install -y procps  build-essential && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /hygeia/TwoGroup
+WORKDIR /hygeia/two_group
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
@@ -11,4 +11,7 @@ COPY preprocess_data.py ./
 COPY run_inference_two_groups.py ./
 
 COPY ./bin ./bin/
-ENV PATH="/hygeia/TwoGroup/bin:${PATH}"
+COPY ./hygeia ./hygeia/
+
+ENV PYTHONPATH="${PYTHONPATH}:/hygeia/two_group/"
+ENV PATH="/hygeia/two_group/bin:${PATH}"
