--- a/main.config
+++ b/main.config
@@ -26,3 +26,7 @@ trace {
   enabled = true
   file = "results/pipeline_info/pipeline_trace_${trace_timestamp}.txt"
 }
+dag {
+  enabled = true
+  file = "results/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+}
