add missing file in docker

--- a/src/two_group/Dockerfile
+++ b/src/two_group/Dockerfile
@@ -9,6 +9,8 @@ RUN pip install -r requirements.txt
 
 COPY preprocess_data.py ./
 COPY run_inference_two_groups.py ./
+COPY aggregate_results.py ./
+COPY get_dmps.py ./
 
 COPY ./bin ./bin/
 COPY ./hygeia ./hygeia/
