fix issues in get_dmpts

--- a/src/two_group/Dockerfile
+++ b/src/two_group/Dockerfile
@@ -11,6 +11,7 @@ COPY preprocess_data.py ./
 COPY run_inference_two_groups.py ./
 COPY aggregate_results.py ./
 COPY get_dmps.py ./
+COPY multiple_testing.py ./
 
 COPY ./bin ./bin/
 COPY ./hygeia ./hygeia/
