--- a/nextflow.config
+++ b/nextflow.config
@@ -19,9 +19,9 @@ process {
   // errorStrategy = 'ignore'
 }
 
-# docker {
-#   enabled = true
-# }
+docker {
+  enabled = true
+}
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
