define an env variable to set base_dir for docker

--- a/src/single_group/Dockerfile
+++ b/src/single_group/Dockerfile
@@ -5,9 +5,10 @@ RUN apt-get update && apt-get install -y procps && rm -rf /var/lib/apt/lists/*
 
 RUN Rscript -e 'install.packages(c("tidyverse", "argparser", "Rcpp", "RcppArmadillo"))'
 
-WORKDIR /hygeia/SingleGroup
+WORKDIR /hygeia/single_group
 COPY ./src/ ./src/
 RUN Rscript ./src/r/build.R --src_root_dir ./src
 
 COPY ./bin ./bin
-ENV PATH="/hygeia/SingleGroup/bin:${PATH}"
+ENV HYGEIA_SINGLE_GRP_BASE_PATH="/hygeia/single_group/"
+ENV PATH="/hygeia/single_group/bin:${PATH}"
