update docker version

--- a/src/two_group/Dockerfile
+++ b/src/two_group/Dockerfile
@@ -15,6 +15,7 @@ COPY multiple_testing.py ./
 
 COPY ./bin ./bin/
 COPY ./hygeia ./hygeia/
+COPY ./hygeia.docker ./bin/hygeia
 
 ENV PYTHONPATH="${PYTHONPATH}:/hygeia/two_group/"
 ENV HYGEIA_TWO_GRP_BASE_PATH="/hygeia/two_group/"
