--- a/src/single_group/Dockerfile
+++ b/src/single_group/Dockerfile
@@ -10,5 +10,5 @@ COPY ./src/ ./src/
 RUN Rscript ./src/r/build.R --src_root_dir ./src
 
 COPY ./bin ./bin
-ENV HYGEIA_SINGLE_GRP_BASE_PATH="/hygeia/single_group/"
+COPY hygeia.docker ./bin/hygeia
 ENV PATH="/hygeia/single_group/bin:${PATH}"
