two group model smaller segments

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,290 @@ result
 results
 tmp/test_data/
 __pycache__
+src/two_group/tabular_linear.e2601067.1
+src/two_group/tabular_linear.e2601067.2
+src/two_group/tabular_linear.e2601067.3
+src/two_group/tabular_linear.e2601067.4
+src/two_group/tabular_linear.e2601067.5
+src/two_group/tabular_linear.e2601067.6
+src/two_group/tabular_linear.e2601067.7
+src/two_group/tabular_linear.e2601067.8
+src/two_group/tabular_linear.e2601067.9
+src/two_group/tabular_linear.e2601067.10
+src/two_group/tabular_linear.e2601067.11
+src/two_group/tabular_linear.e2601067.12
+src/two_group/tabular_linear.e2601067.13
+src/two_group/tabular_linear.e2601067.14
+src/two_group/tabular_linear.e2601067.15
+src/two_group/tabular_linear.e2601067.16
+src/two_group/tabular_linear.e2601067.17
+src/two_group/tabular_linear.e2601067.18
+src/two_group/tabular_linear.e2601067.19
+src/two_group/tabular_linear.e2601067.20
+src/two_group/tabular_linear.e2601067.21
+src/two_group/tabular_linear.e2601067.22
+src/two_group/tabular_linear.e2601067.23
+src/two_group/tabular_linear.e2601067.24
+src/two_group/tabular_linear.e2601067.25
+src/two_group/tabular_linear.e2601067.26
+src/two_group/tabular_linear.e2601067.27
+src/two_group/tabular_linear.e2601067.28
+src/two_group/tabular_linear.e2601067.29
+src/two_group/tabular_linear.e2601067.30
+src/two_group/tabular_linear.e2601069.1
+src/two_group/tabular_linear.e2601069.2
+src/two_group/tabular_linear.e2601069.3
+src/two_group/tabular_linear.e2601071.1
+src/two_group/tabular_linear.e2601071.2
+src/two_group/tabular_linear.e2601071.3
+src/two_group/tabular_linear.e2601071.4
+src/two_group/tabular_linear.e2601071.5
+src/two_group/tabular_linear.e2601071.6
+src/two_group/tabular_linear.e2601071.7
+src/two_group/tabular_linear.e2601071.8
+src/two_group/tabular_linear.e2601071.9
+src/two_group/tabular_linear.e2601071.10
+src/two_group/tabular_linear.e2601071.11
+src/two_group/tabular_linear.e2601071.12
+src/two_group/tabular_linear.e2601071.13
+src/two_group/tabular_linear.e2601071.14
+src/two_group/tabular_linear.e2601071.15
+src/two_group/tabular_linear.e2601071.16
+src/two_group/tabular_linear.e2601071.17
+src/two_group/tabular_linear.e2601071.18
+src/two_group/tabular_linear.e2601071.19
+src/two_group/tabular_linear.e2601071.20
+src/two_group/tabular_linear.e2601071.21
+src/two_group/tabular_linear.e2601071.22
+src/two_group/tabular_linear.e2601071.23
+src/two_group/tabular_linear.e2601071.24
+src/two_group/tabular_linear.e2601071.25
+src/two_group/tabular_linear.e2601071.26
+src/two_group/tabular_linear.e2601071.27
+src/two_group/tabular_linear.e2601071.28
+src/two_group/tabular_linear.e2601071.29
+src/two_group/tabular_linear.e2601071.30
+src/two_group/tabular_linear.e2607447.1
+src/two_group/tabular_linear.e2607447.2
+src/two_group/tabular_linear.e2607448.1
+src/two_group/tabular_linear.e2607448.2
+src/two_group/tabular_linear.e2607449
+src/two_group/tabular_linear.e2607450.1
+src/two_group/tabular_linear.e2607450.2
+src/two_group/tabular_linear.e2607450.3
+src/two_group/tabular_linear.e2607450.4
+src/two_group/tabular_linear.e2607450.5
+src/two_group/tabular_linear.e2607450.6
+src/two_group/tabular_linear.e2607450.7
+src/two_group/tabular_linear.e2607450.8
+src/two_group/tabular_linear.e2607450.9
+src/two_group/tabular_linear.e2607450.10
+src/two_group/tabular_linear.e2607450.11
+src/two_group/tabular_linear.e2607450.12
+src/two_group/tabular_linear.e2607450.13
+src/two_group/tabular_linear.e2607450.14
+src/two_group/tabular_linear.e2607450.15
+src/two_group/tabular_linear.e2607450.16
+src/two_group/tabular_linear.e2607450.17
+src/two_group/tabular_linear.e2607450.18
+src/two_group/tabular_linear.e2607450.19
+src/two_group/tabular_linear.e2607450.20
+src/two_group/tabular_linear.e2607450.21
+src/two_group/tabular_linear.e2607450.22
+src/two_group/tabular_linear.e2607450.23
+src/two_group/tabular_linear.e2607450.24
+src/two_group/tabular_linear.e2607450.25
+src/two_group/tabular_linear.e2607450.26
+src/two_group/tabular_linear.e2607450.27
+src/two_group/tabular_linear.e2607450.28
+src/two_group/tabular_linear.e2607450.29
+src/two_group/tabular_linear.e2607450.30
+src/two_group/tabular_linear.e2607451.1
+src/two_group/tabular_linear.e2607451.2
+src/two_group/tabular_linear.e2607451.3
+src/two_group/tabular_linear.e2607451.4
+src/two_group/tabular_linear.e2607451.5
+src/two_group/tabular_linear.e2607451.6
+src/two_group/tabular_linear.e2607451.7
+src/two_group/tabular_linear.e2607451.8
+src/two_group/tabular_linear.e2607451.9
+src/two_group/tabular_linear.e2607451.10
+src/two_group/tabular_linear.e2607451.11
+src/two_group/tabular_linear.e2607451.12
+src/two_group/tabular_linear.e2607451.13
+src/two_group/tabular_linear.e2607451.14
+src/two_group/tabular_linear.e2607451.15
+src/two_group/tabular_linear.e2607451.16
+src/two_group/tabular_linear.e2607451.17
+src/two_group/tabular_linear.e2607451.18
+src/two_group/tabular_linear.e2607451.19
+src/two_group/tabular_linear.e2607451.20
+src/two_group/tabular_linear.e2607451.21
+src/two_group/tabular_linear.e2607451.22
+src/two_group/tabular_linear.e2607451.23
+src/two_group/tabular_linear.e2607451.24
+src/two_group/tabular_linear.e2607451.25
+src/two_group/tabular_linear.e2607451.26
+src/two_group/tabular_linear.e2607451.27
+src/two_group/tabular_linear.e2607451.28
+src/two_group/tabular_linear.e2607451.29
+src/two_group/tabular_linear.e2607451.30
+src/two_group/tabular_linear.e2607452
+src/two_group/tabular_linear.o2601067.1
+src/two_group/tabular_linear.o2601067.2
+src/two_group/tabular_linear.o2601067.3
+src/two_group/tabular_linear.o2601067.4
+src/two_group/tabular_linear.o2601067.5
+src/two_group/tabular_linear.o2601067.6
+src/two_group/tabular_linear.o2601067.7
+src/two_group/tabular_linear.o2601067.8
+src/two_group/tabular_linear.o2601067.9
+src/two_group/tabular_linear.o2601067.10
+src/two_group/tabular_linear.o2601067.11
+src/two_group/tabular_linear.o2601067.12
+src/two_group/tabular_linear.o2601067.13
+src/two_group/tabular_linear.o2601067.14
+src/two_group/tabular_linear.o2601067.15
+src/two_group/tabular_linear.o2601067.16
+src/two_group/tabular_linear.o2601067.17
+src/two_group/tabular_linear.o2601067.18
+src/two_group/tabular_linear.o2601067.19
+src/two_group/tabular_linear.o2601067.20
+src/two_group/tabular_linear.o2601067.21
+src/two_group/tabular_linear.o2601067.22
+src/two_group/tabular_linear.o2601067.23
+src/two_group/tabular_linear.o2601067.24
+src/two_group/tabular_linear.o2601067.25
+src/two_group/tabular_linear.o2601067.26
+src/two_group/tabular_linear.o2601067.27
+src/two_group/tabular_linear.o2601067.28
+src/two_group/tabular_linear.o2601067.29
+src/two_group/tabular_linear.o2601067.30
+src/two_group/tabular_linear.o2601069.1
+src/two_group/tabular_linear.o2601069.2
+src/two_group/tabular_linear.o2601069.3
+src/two_group/tabular_linear.o2601071.1
+src/two_group/tabular_linear.o2601071.2
+src/two_group/tabular_linear.o2601071.3
+src/two_group/tabular_linear.o2601071.4
+src/two_group/tabular_linear.o2601071.5
+src/two_group/tabular_linear.o2601071.6
+src/two_group/tabular_linear.o2601071.7
+src/two_group/tabular_linear.o2601071.8
+src/two_group/tabular_linear.o2601071.9
+src/two_group/tabular_linear.o2601071.10
+src/two_group/tabular_linear.o2601071.11
+src/two_group/tabular_linear.o2601071.12
+src/two_group/tabular_linear.o2601071.13
+src/two_group/tabular_linear.o2601071.14
+src/two_group/tabular_linear.o2601071.15
+src/two_group/tabular_linear.o2601071.16
+src/two_group/tabular_linear.o2601071.17
+src/two_group/tabular_linear.o2601071.18
+src/two_group/tabular_linear.o2601071.19
+src/two_group/tabular_linear.o2601071.20
+src/two_group/tabular_linear.o2601071.21
+src/two_group/tabular_linear.o2601071.22
+src/two_group/tabular_linear.o2601071.23
+src/two_group/tabular_linear.o2601071.24
+src/two_group/tabular_linear.o2601071.25
+src/two_group/tabular_linear.o2601071.26
+src/two_group/tabular_linear.o2601071.27
+src/two_group/tabular_linear.o2601071.28
+src/two_group/tabular_linear.o2601071.29
+src/two_group/tabular_linear.o2601071.30
+src/two_group/tabular_linear.o2607447.1
+src/two_group/tabular_linear.o2607447.2
+src/two_group/tabular_linear.o2607448.1
+src/two_group/tabular_linear.o2607448.2
+src/two_group/tabular_linear.o2607449
+src/two_group/tabular_linear.o2607450.1
+src/two_group/tabular_linear.o2607450.2
+src/two_group/tabular_linear.o2607450.3
+src/two_group/tabular_linear.o2607450.4
+src/two_group/tabular_linear.o2607450.5
+src/two_group/tabular_linear.o2607450.6
+src/two_group/tabular_linear.o2607450.7
+src/two_group/tabular_linear.o2607450.8
+src/two_group/tabular_linear.o2607450.9
+src/two_group/tabular_linear.o2607450.10
+src/two_group/tabular_linear.o2607450.11
+src/two_group/tabular_linear.o2607450.12
+src/two_group/tabular_linear.o2607450.13
+src/two_group/tabular_linear.o2607450.14
+src/two_group/tabular_linear.o2607450.15
+src/two_group/tabular_linear.o2607450.16
+src/two_group/tabular_linear.o2607450.17
+src/two_group/tabular_linear.o2607450.18
+src/two_group/tabular_linear.o2607450.19
+src/two_group/tabular_linear.o2607450.20
+src/two_group/tabular_linear.o2607450.21
+src/two_group/tabular_linear.o2607450.22
+src/two_group/tabular_linear.o2607450.23
+src/two_group/tabular_linear.o2607450.24
+src/two_group/tabular_linear.o2607450.25
+src/two_group/tabular_linear.o2607450.26
+src/two_group/tabular_linear.o2607450.27
+src/two_group/tabular_linear.o2607450.28
+src/two_group/tabular_linear.o2607450.29
+src/two_group/tabular_linear.o2607450.30
+src/two_group/tabular_linear.o2607451.1
+src/two_group/tabular_linear.o2607451.2
+src/two_group/tabular_linear.o2607451.3
+src/two_group/tabular_linear.o2607451.4
+src/two_group/tabular_linear.o2607451.5
+src/two_group/tabular_linear.o2607451.6
+src/two_group/tabular_linear.o2607451.7
+src/two_group/tabular_linear.o2607451.8
+src/two_group/tabular_linear.o2607451.9
+src/two_group/tabular_linear.o2607451.10
+src/two_group/tabular_linear.o2607451.11
+src/two_group/tabular_linear.o2607451.12
+src/two_group/tabular_linear.o2607451.13
+src/two_group/tabular_linear.o2607451.14
+src/two_group/tabular_linear.o2607451.15
+src/two_group/tabular_linear.o2607451.16
+src/two_group/tabular_linear.o2607451.17
+src/two_group/tabular_linear.o2607451.18
+src/two_group/tabular_linear.o2607451.19
+src/two_group/tabular_linear.o2607451.20
+src/two_group/tabular_linear.o2607451.21
+src/two_group/tabular_linear.o2607451.22
+src/two_group/tabular_linear.o2607451.23
+src/two_group/tabular_linear.o2607451.24
+src/two_group/tabular_linear.o2607451.25
+src/two_group/tabular_linear.o2607451.26
+src/two_group/tabular_linear.o2607451.27
+src/two_group/tabular_linear.o2607451.28
+src/two_group/tabular_linear.o2607451.29
+src/two_group/tabular_linear.o2607451.30
+src/two_group/tabular_linear.o2607452
+.vscode/launch.json
+data/_regimeProbabilityEstimates_1_1_.csv
+data/cpg_sites_merged_1.txt
+data/dmr_5_0.001_0.5_0.5.csv
+data/dmr_5_0.001_0.5_50.csv
+data/dmr_5_0.001_0.9_50.csv
+data/dmr_5_1e-05_0.5_0.5.csv
+data/dmr_5_1e-05_0.5_50.csv
+data/dmr_5_1e-05_0.9_50.csv
+data/n_methylated_reads_case_22.txt
+data/n_methylated_reads_control_22.txt
+data/n_total_reads_case_22.txt
+data/n_total_reads_case.csv
+data/n_total_reads_control_22.txt
+data/n_total_reads_control.csv
+data/observations_case.csv
+data/observations_control.csv
+data/positions_22.txt
+data/regions_config0.csv
+data/regions_config1.csv
+data/true_case_states-2.csv
+test_data/single_group_results/theta_22.csv
+test_data/single_group_results/1/8_convertedFinalThetaEstimates_1_1_.csv
+test_data/single_group_results/1/8_finalThetaEstimates_1_1_.csv
+test_data/single_group_results/22/8_convertedFinalThetaEstimates_1_1_.csv
+.gitignore
+.gitignore
+src/two_group/run_batched_two_group_model.sh
+.gitignore
