add batches to nextflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,7 @@ params {
   meteor_sigma = "0.05,0.05,0.1,0.1,0.1,0.2886751"
   min_cpg_sites_between_change_points = 3
   num_of_inference_seeds = 3
+  batches = 3
   debug = false
 }
 
