--- a/nextflow.config
+++ b/nextflow.config
@@ -7,6 +7,7 @@ params {
   num_of_inference_seeds = 3
   batches = 3
   debug = false
+  output_dir = 'results'
 }
 
 profiles {
@@ -22,22 +23,33 @@ process {
 
 docker {
   enabled = true
+  runOptions = '-u $(id -u):$(id -g)'
 }
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
   enabled = true
-  file = "results/pipeline_info/execution_timeline_${trace_timestamp}.html"
+  file = "${params.output_dir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
 }
 report {
   enabled = true
-  file = "results/pipeline_info/execution_report_${trace_timestamp}.html"
+  file = "${params.output_dir}/pipeline_info/execution_report_${trace_timestamp}.html"
 }
 trace {
   enabled = true
-  file = "results/pipeline_info/pipeline_trace_${trace_timestamp}.txt"
+  file = "${params.output_dir}/pipeline_info/pipeline_trace_${trace_timestamp}.txt"
 }
 dag {
   enabled = true
-  file = "results/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+  file = "${params.output_dir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+}
+
+manifest {
+    name = 'hygeia'
+    author = 'Your Name'
+    homePage = 'https://github.com/ucl-medical-genomics/hygeia'
+    description = 'Your pipeline description'
+    mainScript = 'main.nf'
+    nextflowVersion = '>=22.10.0'
+    version = '1.0.0'
 }
