--- a/aws.config
+++ b/aws.config
@@ -1,8 +1,8 @@
 process {
   executor = 'awsbatch'
   queue = 'my-batch-queue'
-    errorStrategy = 'retry'
-    maxRetries = 3
+  // errorStrategy = 'retry'
+  // maxRetries = 1
 }
 aws {
   profile = 'nextflow'
