--- a/aws.params.config
+++ b/aws.params.config
@@ -5,5 +5,5 @@ params.meteor_mu = "0.95,0.05,0.8,0.2,0.50,0.50"
 params.meteor_sigma = "0.05,0.05,0.1,0.1,0.1,0.2886751"
 params.min_cpg_sites_between_change_points = 3
 params.num_of_inference_seeds = 2
-params.chroms = "22"
-params.batches = 1
+params.chroms = "21,22"
+params.batch_size = 100000
