fix memory requirements for infer

--- a/aws.params.config
+++ b/aws.params.config
@@ -1,9 +1,6 @@
-params.cpg_file_path = "/mnt/scratch/moghul/hygeia_data/ref/cpg.tsv.gz"
-params.sample_sheet = "/mnt/scratch/moghul/hygeia_data/aging/sample_sheet.csv"
-params.output_dir = "results"
-params.meteor_mu = "0.95,0.05,0.8,0.2,0.50,0.50"
-params.meteor_sigma = "0.05,0.05,0.1,0.1,0.1,0.2886751"
+params.cpg_file_path = "s3://nf-seqera/hygeia_data/ref/cpg.tsv.gz"
+params.sample_sheet = "s3://nf-seqera/hygeia_data/aging/sample_sheet_s3.csv"
+params.output_dir = "s3://nf-seqera/hygeia_analysis/out1"
 params.min_cpg_sites_between_change_points = 3
 params.num_of_inference_seeds = 2
 params.chroms = "21,22"
-params.batch_size = 100000
