do not run inference with two group

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,9 @@ params {
   debug = false
   output_dir = 'results'
   batch_size = 100000
+  two_group = true
+
+  trace_report_suffix = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 }
 
 profiles {
@@ -27,22 +30,21 @@ docker {
   runOptions = '-u $(id -u):$(id -g)'
 }
 
-def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
   enabled = true
-  file = "${params.output_dir}/pipeline_info/execution_timeline_${trace_timestamp}.html"
+  file = "${params.output_dir}/pipeline_info/execution_timeline_${params.trace_report_suffix}.html"
 }
 report {
   enabled = true
-  file = "${params.output_dir}/pipeline_info/execution_report_${trace_timestamp}.html"
+  file = "${params.output_dir}/pipeline_info/execution_report_${params.trace_report_suffix}.html"
 }
 trace {
   enabled = true
-  file = "${params.output_dir}/pipeline_info/pipeline_trace_${trace_timestamp}.txt"
+  file = "${params.output_dir}/pipeline_info/pipeline_trace_${params.trace_report_suffix}.txt"
 }
 dag {
   enabled = true
-  file = "${params.output_dir}/pipeline_info/pipeline_dag_${trace_timestamp}.html"
+  file = "${params.output_dir}/pipeline_info/pipeline_dag_${params.trace_report_suffix}.html"
 }
 
 manifest {
