make single group analysis work

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,8 @@ params {
   debug = false
   output_dir = 'results'
   batch_size = 100000
-  two_group = true
+  two_group = false
+  // two_group = true
 
   trace_report_suffix = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 }
