add hygeia --version

--- a/src/single_group/Dockerfile
+++ b/src/single_group/Dockerfile
@@ -12,3 +12,5 @@ RUN Rscript ./src/r/build.R --src_root_dir ./src
 COPY ./bin ./bin
 COPY hygeia.docker ./bin/hygeia
 ENV PATH="/hygeia/single_group/bin:${PATH}"
+
+ENV HYGEIA_VERSION=0.1.14
