--- a/src/two_group/Dockerfile
+++ b/src/two_group/Dockerfile
@@ -21,3 +21,4 @@ COPY ./hygeia.docker ./bin/hygeia
 ENV PYTHONPATH=/hygeia/two_group/${PYTHONPATH:+:${PYTHONPATH}}
 ENV HYGEIA_TWO_GRP_BASE_PATH="/hygeia/two_group/"
 ENV PATH="/hygeia/two_group/bin:${PATH}"
+ENV HYGEIA_VERSION=0.1.14
