--- a/aws.params.config.json
+++ b/aws.params.config.json
@@ -1,8 +1,9 @@
 {
   "cpg_file_path": "s3://nf-hygeia-main/hygeia_data/ref/cpg.tsv.gz",
-  "sample_sheet": "s3://nf-hygeia-main/hygeia_data/aging/sample_sheet_s3.csv",
+  "sample_sheet": "s3://nf-hygeia-main/hygeia_data/aging/s3_sample_sheet.csv",
   "output_dir": "s3://nf-hygeia-main/hygeia_analysis/out1",
   "min_cpg_sites_between_change_points": 3,
   "num_of_inference_seeds": 2,
-  "chroms": "21,22"
+  "chroms": "21,22",
+  "two_group": "false"
 }
