fix make bed file script + further updates

--- a/src/single_group/Dockerfile
+++ b/src/single_group/Dockerfile
@@ -1,9 +1,9 @@
 FROM rocker/r-ver:latest
 
-# Needed by Nextflow
-RUN apt-get update && apt-get install -y procps && rm -rf /var/lib/apt/lists/*
+# Install procps (Needed by Nextflow) + samtools and other dependencies
+RUN apt-get update && apt-get install -y procps samtools tabix && rm -rf /var/lib/apt/lists/*
 
-RUN Rscript -e 'install.packages(c("tidyverse", "argparser", "Rcpp", "RcppArmadillo"))'
+RUN Rscript -e 'install.packages(c("tidyverse", "argparser", "Rcpp", "RcppArmadillo", "R.utils"))'
 
 WORKDIR /hygeia/single_group
 COPY ./src/ ./src/
