--- a/src/two_group/requirements.txt
+++ b/src/two_group/requirements.txt
@@ -46,6 +46,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
 pipreqs==0.4.13
+polars==1.8.2
 promise==2.3
 prompt-toolkit==3.0.8
 protobuf==3.20.0
