fix default error handling

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,8 +21,8 @@ profiles {
 }
 
 process {
-  // errorStrategy = 'terminate'
-  errorStrategy = 'ignore'
+  errorStrategy = 'terminate'
+  // errorStrategy = 'ignore'
 }
 
 docker {
