better error / retry handling

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,9 +21,12 @@ profiles {
 }
 
 process {
-  errorStrategy = 'terminate'
-  // errorStrategy = 'ignore'
+  errorStrategy  = { task.attempt <= process.maxRetries ? 'retry' : 'ignore' }
+  // errorStrategy = 'terminate'
+  maxRetries     = 5
 }
+
+aws.batch.maxSpotAttempts = 5
 
 docker {
   enabled = true
