--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 // default params
 params {
   // chroms = "1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22"
-  chroms = "21,22"
+  chroms = "chr21,chr22"
   meteor_mu = "0.95,0.05,0.8,0.2,0.50,0.50"
   meteor_sigma = "0.05,0.05,0.1,0.1,0.1,0.2886751"
   min_cpg_sites_between_change_points = 3
